# Google-Scholar-Scraping

./: ChangeLog  README.md  setup.cfg
res/: blacklist.txt
rst/: CNKI_API.py  Google_Scholar_API.py  __init__.py  cli
rst/downloaders/: downloader.py
rst/engines/: __init__.py  cnki.py  engine.py  gs.py
rst/sites/: __init__.py  bmj.py  sdirect.py  site.py
rst/util/: article.py  captcha.py  config.py  db.py  dlpdf.py  occurences.py  util.py  webdriver.py
